EKS_Chinese/aws-eks-kubernetes-handson-eng/6_Expose_Pods_with_Ingress_Controller/service_guestbook_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: guestbook
  name: guestbook
  namespace: default
spec:
  ports:
  - nodePort: 30605
    port: 3000
    protocol: TCP
    targetPort: http-server
  selector:
    app: guestbook
  type: NodePort
