EKS_Chinese/aws-eks-kubernetes-handson-eng/6_Expose_Pods_with_Ingress_Controller/service_lb_guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
  name: guestbook
  namespace: default
spec:
  ports:
  - nodePort: 30146
    port: 3000
    protocol: TCP
    targetPort: http-server
  selector:
    app: guestbook
  sessionAffinity: None
  type: NodePort
